# src/main/java/com/pragma/powerup/application/handler/IUserHandler.java
@@ -1,0 +1,8 @@
+package com.pragma.powerup.application.handler;
+
+import com.pragma.powerup.application.dto.request.UserRequestDto;
+import com.pragma.powerup.application.dto.response.UserResponseDto;
+
+public interface IUserHandler {
+    UserResponseDto createUser(UserRequestDto request);
+}
