# src/main/java/com/pragma/powerup/domain/api/IUserServicePort.java
@@ -1,0 +1,7 @@
+package com.pragma.powerup.domain.api;
+
+import com.pragma.powerup.domain.model.User;
+
+public interface IUserServicePort {
+    User createUser(User user);
+}
